# rsbasic

./: .gitignore  Cargo.toml  README.md
.github/workflows/: docs.yml
games/: README.md
patch/: README.md
src/: lib.rs
src/doc/: appendix_a.rs  appendix_c.rs  chapter_1.rs  chapter_2.rs  introduction.rs
src/doc/statements/: data.rs  input.rs
src/lang/: lex.rs  line.rs  mod.rs  parse.rs  token.rs
src/mach/: codegen.rs  function.rs  link.rs  listing.rs  operation.rs  program.rs  runtime.rs  stack.rs  val.rs  var.rs
src/term/: mod.rs
tests/: expression_test.rs  function_test.rs  lex_test.rs  parse_test.rs  statement_test.rs
tests/common/: mod.rs
