[package]
edition = "2024"
name = "rsbasic"
version = "0.7.1"
authors = ["Rumbledethumps"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/rumbledethumps/rsbasic"
description = "Rumbledethumps' Stack BASIC"
readme = "README.md"
exclude = ["patch"]

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "s"

[dependencies]
ansi_term = "0.12"
chrono = "0.4"
crc = "1.8"
ctrlc = "3"
linefeed = "0.6"
mortal = "0.2"
rand = "0.8"
reqwest = {version = "0.11", default-features = false, features = ["blocking", "rustls-tls-native-roots"] }

[lib]
name = "rsbasic"
doc = true
test = true

[[bin]]
name = "rsbasic"
path = "src/main.rs"
doc = false
test = false
