[package]
edition = "2024"
name = "rsbasic"
version = "0.8.0"
authors = ["Rumbledethumps"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/rumbledethumps/rsbasic"
documentation = "https://rumbledethumps.github.io/rsbasic"
description = "Rumbledethumps' Stack BASIC"
readme = "README.md"
exclude = ["patch"]

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "s"

[dependencies]
chrono = "0.4"
crc = "3"
crossterm = "0.29"
ctrlc = "3"
nu-ansi-term = "0.50"
rand = "0.10"
rustyline = "18"
rustyline-derive = "0.12"
ureq = "3"

[lib]
name = "rsbasic"
doc = true
test = true

[[bin]]
name = "rsbasic"
path = "src/main.rs"
doc = false
test = false
